...
}

function Heading() {
  return (
    <div className="h-[37.493px] relative shrink-0 w-[119.032px]" data-name="Heading 1">
      <div className="bg-clip-padding border-0 border-[transparent] border-solid relative size-full">
        <p className="absolute font-['Inter:Regular',sans-serif] font-normal leading-[37.5px] left-0 not-italic text-[#e8edf5] text-[25px] top-[-0.18px] tracking-[0.1404px]">Find Tutors</p>
      </div>
    </div>
  );
}

function Icon3() {
...
  );
}

function Text61() {
  return (
    <div className="absolute h-[14.997px] left-[21.22px] top-[50.99px] w-[32.355px]" data-name="Text">
      <p className="-translate-x-1/2 absolute font-['Inter:Semi_Bold',sans-serif] font-semibold leading-[15px] left-[16px] not-italic text-[#5b7ceb] text-[10px] text-center top-[0.27px] tracking-[0.1172px]">Tutors</p>
    </div>
  );
}

function Container70() {
  return <div className="absolute h-[3.993px] left-[13.39px] rounded-[21385400px] top-0 w-[47.999px]" data-name="Container" style={{ backgroundImage: "linear-gradient(175.244deg, rgb(67, 97, 217) 0%, rgb(91, 124, 235) 100%)" }} />;
...
